Add comprehensive logging configuration and examples
- Updated application.properties to include logging levels for various packages.
- Introduced logback-spring.xml for structured logging with file rotation and console output.
- Created LOGGING_EXAMPLES.md to guide developers on effective logging practices.
- Added PowerShell script (monitor-logs.ps1) for monitoring application logs in real-time.
- Generated initial log files (app-log.txt and error-log.txt) for capturing application logs.